--- a/exhibitions/afrofutures.html
+++ b/exhibitions/afrofutures.html
@@ -106,11 +106,7 @@
                     alt='extra-icon-image' />
             </a>
 
-            <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-linkedin_vgczmg.svg"
-                    alt='extra-icon-image' />
-            </a>
+
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
                 <img class="extra-icon-image"
@@ -143,7 +139,7 @@
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669888806/afro-futures/1_soaifd.webp"
                     alt="afro future exhbition by neec nonso">
             </picture>
-            
+
             <picture>
                 <source media="(max-width: 500px)"
                     srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669966495/afro-futures/mobile/2_nlqtiv.webp">
@@ -169,7 +165,8 @@
                     alt="afro future exhbition by neec nonso">
             </picture>
             <picture>
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669966495/afro-futures/mobile/6_luidke.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669966495/afro-futures/mobile/6_luidke.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669888806/afro-futures/6_nr44eb.webp"
                     alt="afro future exhbition by neec nonso">
             </picture>
