--- a/exhibitions/agathering.html
+++ b/exhibitions/agathering.html
@@ -106,11 +106,7 @@
                     alt='extra-icon-image' />
             </a>
 
-            <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-linkedin_vgczmg.svg"
-                    alt='extra-icon-image' />
-            </a>
+
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
                 <img class="extra-icon-image"
@@ -138,38 +134,44 @@
 
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669966704/a-gathering/mobile/2_uhytxm.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669966704/a-gathering/mobile/2_uhytxm.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669885332/a-gathering/2_indfzn.webp"
                     alt="nigeria trending lagos fringe by neec nonso">
             </picture>
 
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669966704/a-gathering/mobile/3_rnftwv.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669966704/a-gathering/mobile/3_rnftwv.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669885332/a-gathering/3_bkwh52.webp"
                     alt="nigeria trending lagos fringe by neec nonso">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669966704/a-gathering/mobile/4_z0ks68.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669966704/a-gathering/mobile/4_z0ks68.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669885332/a-gathering/4_suksh8.webp"
                     alt="nigeria trending lagos fringe by neec nonso">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669966704/a-gathering/mobile/5_qaylez.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669966704/a-gathering/mobile/5_qaylez.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669885332/a-gathering/5_qgpsqj.webp"
                     alt="nigeria trending lagos fringe by neec nonso">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669966704/a-gathering/mobile/6_mibeeg.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669966704/a-gathering/mobile/6_mibeeg.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669885332/a-gathering/6_udkpco.webp"
                     alt="nigeria trending lagos fringe by neec nonso">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669966705/a-gathering/mobile/7_zbnn7n.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669966705/a-gathering/mobile/7_zbnn7n.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669885333/a-gathering/7_wnr7ap.webp"
                     alt="nigeria trending lagos fringe by neec nonso">
             </picture>
@@ -181,19 +183,22 @@
 
         <section class="child-images-last">
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669966705/a-gathering/mobile/8_bmuo5n.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669966705/a-gathering/mobile/8_bmuo5n.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669885333/a-gathering/8_rlrvsn.webp"
                     alt="nigeria trending lagos fringe by neec nonso">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669966705/a-gathering/mobile/9_t7oae1.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669966705/a-gathering/mobile/9_t7oae1.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669885333/a-gathering/9_qxijdw.webp"
                     alt="nigeria trending lagos fringe by neec nonso">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669966705/a-gathering/mobile/10_wivgbm.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669966705/a-gathering/mobile/10_wivgbm.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669885333/a-gathering/10_t8ygui.webp"
                     alt="nigeria trending lagos fringe by neec nonso">
             </picture>
