--- a/exhibitions/boundariesofreason.html
+++ b/exhibitions/boundariesofreason.html
@@ -106,11 +106,7 @@
                     alt='extra-icon-image' />
             </a>
 
-            <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-linkedin_vgczmg.svg"
-                    alt='extra-icon-image' />
-            </a>
+
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
                 <img class="extra-icon-image"
@@ -138,17 +134,20 @@
         <section class="exhibition-images">
             <img class="boundariesofreason" name="slide" />
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967303/boundaries-of-reason/mobile/2_vc3wpu.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967303/boundaries-of-reason/mobile/2_vc3wpu.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669878555/boundaries-of-reason/3_blaize_itodo_sgo33d.jpg"
                     alt="nigeria trending lagos fringe by neec nonso">
             </picture>
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967303/boundaries-of-reason/mobile/3_mx3sez.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967303/boundaries-of-reason/mobile/3_mx3sez.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669878555/boundaries-of-reason/2_blaize_itodo_tbcv9f.jpg"
                     alt="nigeria trending lagos fringe by neec nonso">
             </picture>
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967303/boundaries-of-reason/mobile/4_w1rc8l.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967303/boundaries-of-reason/mobile/4_w1rc8l.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669878555/boundaries-of-reason/4_blaize_itodo_xnjxyr.jpg"
                     alt="nigeria trending lagos fringe by neec nonso">
             </picture>
