--- a/exhibitions/nigeria-trending-lagos-fringe.html
+++ b/exhibitions/nigeria-trending-lagos-fringe.html
@@ -106,11 +106,7 @@
                     alt='extra-icon-image' />
             </a>
 
-            <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-linkedin_vgczmg.svg"
-                    alt='extra-icon-image' />
-            </a>
+
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
                 <img class="extra-icon-image"
@@ -139,37 +135,43 @@
         <section class="exhibition-images">
 
             <picture class="header-image">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967766/nigeria-trending/mobile/8_kwxpzj.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967766/nigeria-trending/mobile/8_kwxpzj.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669890368/nigeria-trending/8_qnzslf.webp"
                     alt="nigeria trending lagos fringe by neec nonso">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967765/nigeria-trending/mobile/1_r7jepk.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967765/nigeria-trending/mobile/1_r7jepk.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669890367/nigeria-trending/1_nqkp9u.webp"
                     alt="nigeria trending lagos fringe by neec nonso">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967765/nigeria-trending/mobile/3_fp3rvb.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967765/nigeria-trending/mobile/3_fp3rvb.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669890366/nigeria-trending/4_nfj2tl.webp"
                     alt="nigeria trending lagos fringe by neec nonso">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967765/nigeria-trending/mobile/4_np1nld.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967765/nigeria-trending/mobile/4_np1nld.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669890366/nigeria-trending/5_cvipgp.webp"
                     alt="nigeria trending lagos fringe by neec nonso">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967765/nigeria-trending/mobile/5_a9av5p.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967765/nigeria-trending/mobile/5_a9av5p.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669890366/nigeria-trending/6_htzq4z.webp"
                     alt="nigeria trending lagos fringe by neec nonso">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967765/nigeria-trending/mobile/6_dby339.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967765/nigeria-trending/mobile/6_dby339.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669890367/nigeria-trending/7_cjg5nn.webp"
                     alt="nigeria trending lagos fringe by neec nonso">
             </picture>
