--- a/exhibitions/taste-mystique.html
+++ b/exhibitions/taste-mystique.html
@@ -106,11 +106,7 @@
                     alt='extra-icon-image' />
             </a>
 
-            <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-linkedin_vgczmg.svg"
-                    alt='extra-icon-image' />
-            </a>
+
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
                 <img class="extra-icon-image"
@@ -144,37 +140,43 @@
             </picture>
 
             <picture>
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669973183/taste-mystique/mobile/6_xnnczf.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669973183/taste-mystique/mobile/6_xnnczf.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669891520/taste-mystique/6_q2cem3.webp"
                     alt="taste mystique exhbition by neec nonso">
             </picture>
 
             <picture>
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669973184/taste-mystique/mobile/7_apfwh6.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669973184/taste-mystique/mobile/7_apfwh6.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669891521/taste-mystique/7_dwut4p.webp"
                     alt="taste mystique exhbition by neec nonso">
             </picture>
 
             <picture>
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669973186/taste-mystique/mobile/8_fuowai.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669973186/taste-mystique/mobile/8_fuowai.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669891522/taste-mystique/8_ydrr8h.webp"
                     alt="taste mystique exhbition by neec nonso">
             </picture>
 
             <picture>
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669973185/taste-mystique/mobile/9_wouym2.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669973185/taste-mystique/mobile/9_wouym2.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669891522/taste-mystique/9_m5wzst.webp"
                     alt="taste mystique exhbition by neec nonso">
             </picture>
 
             <picture>
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669973187/taste-mystique/mobile/10_vmzl9l.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669973187/taste-mystique/mobile/10_vmzl9l.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669891521/taste-mystique/10_u4jtzr.webp"
                     alt="taste mystique exhbition by neec nonso">
             </picture>
 
             <picture>
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669973186/taste-mystique/mobile/11_zsp4mk.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669973186/taste-mystique/mobile/11_zsp4mk.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669891521/taste-mystique/11_pyj9qz.webp"
                     alt="taste mystique exhbition by neec nonso">
             </picture>
@@ -187,17 +189,20 @@
         <section class="potrait-images-exhibition">
 
             <picture>
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669973182/taste-mystique/mobile/3_vme98u.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669973182/taste-mystique/mobile/3_vme98u.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669891520/taste-mystique/3_owchp6.webp"
                     alt="taste mystique exhbition by neec nonso">
             </picture>
             <picture>
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669973183/taste-mystique/mobile/4_coraix.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669973183/taste-mystique/mobile/4_coraix.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669891520/taste-mystique/4_ilg3nw.webp"
                     alt="taste mystique exhbition by neec nonso">
             </picture>
             <picture>
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669973183/taste-mystique/mobile/5_qacypr.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669973183/taste-mystique/mobile/5_qacypr.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669891520/taste-mystique/5_dh6ucs.webp"
                     alt="taste mystique exhbition by neec nonso">
             </picture>
