--- a/exhibitions/vantage-point.html
+++ b/exhibitions/vantage-point.html
@@ -105,11 +105,7 @@
                     alt='extra-icon-image' />
             </a>
 
-            <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-linkedin_vgczmg.svg"
-                    alt='extra-icon-image' />
-            </a>
+
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
                 <img class="extra-icon-image"
@@ -141,51 +137,59 @@
         <section class="exhibition-images">
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970161/vantage-point/mobile/2_dq4pwo.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970161/vantage-point/mobile/2_dq4pwo.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669884693/vantage-point/2_coxbaj.webp"
                     alt="vantage point exhibition by neec nonso">
             </picture>
 
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970160/vantage-point/mobile/4_pehu9b.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970160/vantage-point/mobile/4_pehu9b.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669884692/vantage-point/4_xx7r1f.webp"
                     alt="vantage point exhibition by neec nonso">
             </picture>
 
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970160/vantage-point/mobile/6_xicvle.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970160/vantage-point/mobile/6_xicvle.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669884692/vantage-point/6_lg2bvr.webp"
                     alt="vantage point exhibition by neec nonso">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970160/vantage-point/mobile/7_hvwnul.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970160/vantage-point/mobile/7_hvwnul.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669884693/vantage-point/7_aseyzr.webp"
                     alt="vantage point exhibition by neec nonso">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970161/vantage-point/mobile/8_ke328r.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970161/vantage-point/mobile/8_ke328r.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669884693/vantage-point/8_adyioj.webp"
                     alt="vantage point exhibition by neec nonso">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970161/vantage-point/mobile/9_ysebb6.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970161/vantage-point/mobile/9_ysebb6.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669884693/vantage-point/11_oqkjyd.webp"
                     alt="vantage point exhibition by neec nonso">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970161/vantage-point/mobile/10_okitmy.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970161/vantage-point/mobile/10_okitmy.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669884693/vantage-point/10_okioqk.webp"
                     alt="vantage point exhibition by neec nonso">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970161/vantage-point/mobile/11_dacmby.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970161/vantage-point/mobile/11_dacmby.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669884693/vantage-point/9_bevryt.webp"
                     alt="vantage point exhibition by neec nonso">
             </picture>
