--- a/exhibitions/yanga.html
+++ b/exhibitions/yanga.html
@@ -103,11 +103,7 @@
                     alt='extra-icon-image' />
             </a>
 
-            <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-linkedin_vgczmg.svg"
-                    alt='extra-icon-image' />
-            </a>
+
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
                 <img class="extra-icon-image"
@@ -137,42 +133,50 @@
 
         <section class="exhbition-images">
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970446/Yanga/mobile/3_jjtqlv.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970446/Yanga/mobile/3_jjtqlv.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669892052/Yanga/3_o33war.webp"
                     alt="yanga exhibition by neec nonso">
             </picture>
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970446/Yanga/mobile/4_hwotke.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970446/Yanga/mobile/4_hwotke.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669892052/Yanga/4_exkqwd.webp"
                     alt="yanga exhibition by neec nonso">
             </picture>
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970446/Yanga/mobile/5_qe6r8n.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970446/Yanga/mobile/5_qe6r8n.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669892052/Yanga/5_vrlsln.webp"
                     alt="yanga exhibition by neec nonso">
             </picture>
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970446/Yanga/mobile/6_xy9ibh.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970446/Yanga/mobile/6_xy9ibh.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669892052/Yanga/6_tz7igp.webp"
                     alt="yanga exhibition by neec nonso">
             </picture>
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970446/Yanga/mobile/7_lsgjrt.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970446/Yanga/mobile/7_lsgjrt.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669892053/Yanga/7_dyxk4o.webp"
                     alt="yanga exhibition by neec nonso">
             </picture>
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970446/Yanga/mobile/8_jyelx5.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970446/Yanga/mobile/8_jyelx5.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669892053/Yanga/8_dixvts.webp"
                     alt="yanga exhibition by neec nonso">
             </picture>
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970446/Yanga/mobile/9_tcdlmn.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970446/Yanga/mobile/9_tcdlmn.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669892053/Yanga/9_uhqk6l.webp"
                     alt="yanga exhibition by neec nonso">
             </picture>
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970446/Yanga/mobile/10_as9fuy.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970446/Yanga/mobile/10_as9fuy.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669892053/Yanga/10_fskr1d.webp"
                     alt="yanga exhibition by neec nonso">
             </picture>
@@ -182,17 +186,20 @@
 
         <section class="potrait-images-exhibition">
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970447/Yanga/mobile/11_fx8fpa.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970447/Yanga/mobile/11_fx8fpa.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669892053/Yanga/11_agzx97.webp"
                     alt="yanga exhibition by neec nonso">
             </picture>
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970447/Yanga/mobile/12_ok6lrn.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970447/Yanga/mobile/12_ok6lrn.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669892053/Yanga/12_vuephs.webp"
                     alt="yanga exhibition by neec nonso">
             </picture>
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970447/Yanga/mobile/13_neq57x.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669970447/Yanga/mobile/13_neq57x.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669892054/Yanga/13_ml0k7x.webp"
                     alt="yanga exhibition by neec nonso">
             </picture>
