--- a/exhibitions/youngcontemporaries.html
+++ b/exhibitions/youngcontemporaries.html
@@ -108,11 +108,7 @@
                     alt='extra-icon-image' />
             </a>
 
-            <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-linkedin_vgczmg.svg"
-                    alt='extra-icon-image' />
-            </a>
+
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
                 <img class="extra-icon-image"
@@ -150,55 +146,64 @@
         <section class="exhibition-images">
 
             <picture>
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669971657/young-contemporaries/mobile/2_jiorxc.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669971657/young-contemporaries/mobile/2_jiorxc.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669881457/young-contemporaries/2_qevzmm.webp"
                     alt="young contemporaries exhibition by neec nonso">
             </picture>
 
             <picture>
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669971657/young-contemporaries/mobile/3_ombmsf.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669971657/young-contemporaries/mobile/3_ombmsf.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669881457/young-contemporaries/3_zornfq.webp"
                     alt="young contemporaries exhibition by neec nonso">
             </picture>
 
             <picture>
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669971657/young-contemporaries/mobile/4_uqu5lh.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669971657/young-contemporaries/mobile/4_uqu5lh.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669881458/young-contemporaries/4_wxtjsy.webp"
                     alt="young contemporaries exhibition by neec nonso">
             </picture>
 
             <picture>
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669971657/young-contemporaries/mobile/5_ssc4fq.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669971657/young-contemporaries/mobile/5_ssc4fq.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669881457/young-contemporaries/5_tjv0yg.webp"
                     alt="young contemporaries exhibition by neec nonso">
             </picture>
 
             <picture>
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669971657/young-contemporaries/mobile/6_up6hst.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669971657/young-contemporaries/mobile/6_up6hst.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669881457/young-contemporaries/6_mqv0hq.webp"
                     alt="young contemporaries exhibition by neec nonso">
             </picture>
 
             <picture>
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669971658/young-contemporaries/mobile/7_aplsqd.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669971658/young-contemporaries/mobile/7_aplsqd.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669881458/young-contemporaries/7_scw5nt.webp"
                     alt="young contemporaries exhibition by neec nonso">
             </picture>
 
             <picture>
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669971658/young-contemporaries/mobile/8_zw9fto.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669971658/young-contemporaries/mobile/8_zw9fto.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669881458/young-contemporaries/8_cdodql.webp"
                     alt="young contemporaries exhibition by neec nonso">
             </picture>
 
             <picture>
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669971658/young-contemporaries/mobile/9_f8bcam.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669971658/young-contemporaries/mobile/9_f8bcam.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669881458/young-contemporaries/9_bredvb.webp"
                     alt="young contemporaries exhibition by neec nonso">
             </picture>
 
             <picture>
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669971658/young-contemporaries/mobile/10_x8vvq1.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669971658/young-contemporaries/mobile/10_x8vvq1.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669881458/young-contemporaries/10_jsxblw.webp"
                     alt="young contemporaries exhibition by neec nonso">
             </picture>
