--- a/projects/christmasandclothes.html
+++ b/projects/christmasandclothes.html
@@ -108,11 +108,7 @@
                     alt='extra-icon-image' />
             </a>
 
-            <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-linkedin_vgczmg.svg"
-                    alt='extra-icon-image' />
-            </a>
+
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
                 <img class="extra-icon-image"
@@ -136,12 +132,20 @@
             <h1 class="project-items-words-title">christmas and clothes.</h1>
 
             <p class="project-items-words-paragraph">
-                as a child growing up in south-east nigeria, my most cherished childhood memories are the ones that happen during the christmas season. it is the period where the children are allowed to visit friends and families adorned with special dresses bought by their parents for the festivities. while the period is laden with gifts exchanged amongst families, friends, and neighbours, the children are transformed into some sort of models as they brandish their new outfits and pose with the toys.
+                as a child growing up in south-east nigeria, my most cherished childhood memories are the ones that
+                happen during the christmas season. it is the period where the children are allowed to visit friends and
+                families adorned with special dresses bought by their parents for the festivities. while the period is
+                laden with gifts exchanged amongst families, friends, and neighbours, the children are transformed into
+                some sort of models as they brandish their new outfits and pose with the toys.
 
             </p>
 
             <p class="project-items-words-paragraph">
-             christmas and clothes is an ongoing project; a portrait series of kids in omor of eastern nigeria, wearing their christmas outfits, and holding their christmas toys, with poses resembling movie stars. i am reflecting on childhood memories by examining what is popular amongst youngsters celebrating christmas, and             interrogating on a deeper scale - the universality of celebration which cuts across social classes.
+                christmas and clothes is an ongoing project; a portrait series of kids in omor of eastern nigeria,
+                wearing their christmas outfits, and holding their christmas toys, with poses resembling movie stars. i
+                am reflecting on childhood memories by examining what is popular amongst youngsters celebrating
+                christmas, and interrogating on a deeper scale - the universality of celebration which cuts across
+                social classes.
             </p>
 
         </div>
