--- a/projects/howtophotographylagostwo.html
+++ b/projects/howtophotographylagostwo.html
@@ -106,11 +106,7 @@
                     alt='extra-icon-image' />
             </a>
 
-            <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-linkedin_vgczmg.svg"
-                    alt='extra-icon-image' />
-            </a>
+
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
                 <img class="extra-icon-image"
@@ -130,7 +126,7 @@
     <main class="project-items-main">
 
         <div class="project-items-words">
-            
+
             <h1 class="project-items-words-title">how to photograph lagos 2</h1>
 
             <p class="project-items-words-paragraph"> lagos is a city where slow and steady wins the race... philosophy
@@ -189,36 +185,36 @@
                     <ul class="carousel-track">
 
                         <li class="carousel-slide current-slide"><img class="carousel-image square"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896697/Projects/howtophotographylagos-two/1_ykcc4y.webp" alt="howtophotographylagos"
-                                loading="">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896697/Projects/howtophotographylagos-two/1_ykcc4y.webp"
+                                alt="howtophotographylagos" loading="">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image square"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896697/Projects/howtophotographylagos-two/2_lerc6j.webp" alt="howtophotographylagos"
-                                loading="">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896697/Projects/howtophotographylagos-two/2_lerc6j.webp"
+                                alt="howtophotographylagos" loading="">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image square"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896697/Projects/howtophotographylagos-two/3_ots3kj.webp" alt="howtophotographylagos"
-                                loading="">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896697/Projects/howtophotographylagos-two/3_ots3kj.webp"
+                                alt="howtophotographylagos" loading="">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image square"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896698/Projects/howtophotographylagos-two/4_hhdxxp.webp" alt="howtophotographylagos"
-                                loading="">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896698/Projects/howtophotographylagos-two/4_hhdxxp.webp"
+                                alt="howtophotographylagos" loading="">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image square"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896698/Projects/howtophotographylagos-two/5_bnwjcn.webp" alt="howtophotographylagos"
-                                loading="">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896698/Projects/howtophotographylagos-two/5_bnwjcn.webp"
+                                alt="howtophotographylagos" loading="">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image square"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896698/Projects/howtophotographylagos-two/6_pdklaq.webp" alt="howtophotographylagos"
-                                loading="">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896698/Projects/howtophotographylagos-two/6_pdklaq.webp"
+                                alt="howtophotographylagos" loading="">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image square"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896698/Projects/howtophotographylagos-two/7_zmncla.webp" alt="howtophotographylagos"
-                                loading="">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896698/Projects/howtophotographylagos-two/7_zmncla.webp"
+                                alt="howtophotographylagos" loading="">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image square"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896699/Projects/howtophotographylagos-two/8_odayco.webp" alt="howtophotographylagos"
-                                loading="">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896699/Projects/howtophotographylagos-two/8_odayco.webp"
+                                alt="howtophotographylagos" loading="">
                         </li>
 
 
@@ -251,31 +247,39 @@
         <div class="project-items-mobile-images">
 
 
-            <img class="mobile-images square" src="https://res.cloudinary.com/da93q413z/image/upload/v1669896712/Projects/howtophotographylagos-two/mobile/1_ujm5ew.webp"
+            <img class="mobile-images square"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896712/Projects/howtophotographylagos-two/mobile/1_ujm5ew.webp"
                 alt="howtophotographylagos" loading="">
 
 
-            <img class="mobile-images square" src="https://res.cloudinary.com/da93q413z/image/upload/v1669896712/Projects/howtophotographylagos-two/mobile/2_onykhx.webp"
+            <img class="mobile-images square"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896712/Projects/howtophotographylagos-two/mobile/2_onykhx.webp"
                 alt="howtophotographylagos" loading="">
 
 
-            <img class="mobile-images square" src="https://res.cloudinary.com/da93q413z/image/upload/v1669896712/Projects/howtophotographylagos-two/mobile/3_ne4frq.webp"
+            <img class="mobile-images square"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896712/Projects/howtophotographylagos-two/mobile/3_ne4frq.webp"
                 alt="howtophotographylagos" loading="">
 
-            <img class="mobile-images square" src="https://res.cloudinary.com/da93q413z/image/upload/v1669896712/Projects/howtophotographylagos-two/mobile/4_yuzdwm.webp"
+            <img class="mobile-images square"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896712/Projects/howtophotographylagos-two/mobile/4_yuzdwm.webp"
                 alt="howtophotographylagos" loading="">
 
 
-            <img class="mobile-images square" src="https://res.cloudinary.com/da93q413z/image/upload/v1669896712/Projects/howtophotographylagos-two/mobile/5_xj54ap.webp"
+            <img class="mobile-images square"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896712/Projects/howtophotographylagos-two/mobile/5_xj54ap.webp"
                 alt="howtophotographylagos" loading="">
 
-            <img class="mobile-images square" src="https://res.cloudinary.com/da93q413z/image/upload/v1669896712/Projects/howtophotographylagos-two/mobile/6_fq5qym.webp"
+            <img class="mobile-images square"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896712/Projects/howtophotographylagos-two/mobile/6_fq5qym.webp"
                 alt="howtophotographylagos" loading="">
 
-            <img class="mobile-images square" src="https://res.cloudinary.com/da93q413z/image/upload/v1669896713/Projects/howtophotographylagos-two/mobile/7_pagu9s.webp"
+            <img class="mobile-images square"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896713/Projects/howtophotographylagos-two/mobile/7_pagu9s.webp"
                 alt="howtophotographylagos" loading="">
 
-            <img class="mobile-images square" src="https://res.cloudinary.com/da93q413z/image/upload/v1669896713/Projects/howtophotographylagos-two/mobile/8_rh6yvj.webp"
+            <img class="mobile-images square"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896713/Projects/howtophotographylagos-two/mobile/8_rh6yvj.webp"
                 alt="howtophotographylagos" loading="">
 
 
