--- a/projects/theanotherbeginning.html
+++ b/projects/theanotherbeginning.html
@@ -105,11 +105,7 @@
                     alt='extra-icon-image' />
             </a>
 
-            <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-linkedin_vgczmg.svg"
-                    alt='extra-icon-image' />
-            </a>
+
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
                 <img class="extra-icon-image"
@@ -234,27 +230,38 @@
 
         <div class="project-items-mobile-images">
 
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669901305/Projects/the%20another%20beginning/mobile/1_ttvdoz.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669901305/Projects/the%20another%20beginning/mobile/1_ttvdoz.webp"
                 alt="theanotherbeginning-mobile-image">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669901305/Projects/the%20another%20beginning/mobile/2_szruv9.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669901305/Projects/the%20another%20beginning/mobile/2_szruv9.webp"
                 alt="theanotherbeginning-mobile-image">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669901305/Projects/the%20another%20beginning/mobile/3_tq3yyn.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669901305/Projects/the%20another%20beginning/mobile/3_tq3yyn.webp"
                 alt="theanotherbeginning-mobile-image">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669901305/Projects/the%20another%20beginning/mobile/4_curmwd.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669901305/Projects/the%20another%20beginning/mobile/4_curmwd.webp"
                 alt="theanotherbeginning-mobile-image">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669901305/Projects/the%20another%20beginning/mobile/5_wv92co.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669901305/Projects/the%20another%20beginning/mobile/5_wv92co.webp"
                 alt="theanotherbeginning-mobile-image">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669901306/Projects/the%20another%20beginning/mobile/12_zx0jcj.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669901306/Projects/the%20another%20beginning/mobile/12_zx0jcj.webp"
                 alt="theanotherbeginning-mobile-image">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669901305/Projects/the%20another%20beginning/mobile/7_z7glax.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669901305/Projects/the%20another%20beginning/mobile/7_z7glax.webp"
                 alt="theanotherbeginning-mobile-image">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669901306/Projects/the%20another%20beginning/mobile/8_ubv1gk.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669901306/Projects/the%20another%20beginning/mobile/8_ubv1gk.webp"
                 alt="theanotherbeginning-mobile-image">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669901306/Projects/the%20another%20beginning/mobile/9_i8io34.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669901306/Projects/the%20another%20beginning/mobile/9_i8io34.webp"
                 alt="theanotherbeginning-mobile-image">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669901306/Projects/the%20another%20beginning/mobile/10_h0rjln.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669901306/Projects/the%20another%20beginning/mobile/10_h0rjln.webp"
                 alt="theanotherbeginning-mobile-image">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669901306/Projects/the%20another%20beginning/mobile/11_r7grqr.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669901306/Projects/the%20another%20beginning/mobile/11_r7grqr.webp"
                 alt="theanotherbeginning-mobile-image">
 
 
