--- a/projects/theboysfraternity.html
+++ b/projects/theboysfraternity.html
@@ -104,11 +104,7 @@
                     alt='extra-icon-image' />
             </a>
 
-            <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-linkedin_vgczmg.svg"
-                    alt='extra-icon-image' />
-            </a>
+
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
                 <img class="extra-icon-image"
@@ -185,44 +181,44 @@
                     <ul class="carousel-track">
 
                         <li class="carousel-slide current-slide"><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904102/Projects/the%20boys%20fraternity/1_bhwl64.webp" alt=" theboysfraternity"
-                                loading="lazy">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904102/Projects/the%20boys%20fraternity/1_bhwl64.webp"
+                                alt=" theboysfraternity" loading="lazy">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904102/Projects/the%20boys%20fraternity/2_wwuzoy.webp" alt=" theboysfraternity"
-                                loading="lazy">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904102/Projects/the%20boys%20fraternity/2_wwuzoy.webp"
+                                alt=" theboysfraternity" loading="lazy">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904102/Projects/the%20boys%20fraternity/3_dovmp3.webp" alt=" theboysfraternity"
-                                loading="lazy">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904102/Projects/the%20boys%20fraternity/3_dovmp3.webp"
+                                alt=" theboysfraternity" loading="lazy">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904102/Projects/the%20boys%20fraternity/4_qihmte.webp" alt=" theboysfraternity"
-                                loading="lazy">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904102/Projects/the%20boys%20fraternity/4_qihmte.webp"
+                                alt=" theboysfraternity" loading="lazy">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904102/Projects/the%20boys%20fraternity/5_kzklm1.webp" alt=" theboysfraternity"
-                                loading="lazy">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904102/Projects/the%20boys%20fraternity/5_kzklm1.webp"
+                                alt=" theboysfraternity" loading="lazy">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904102/Projects/the%20boys%20fraternity/6_orp5p2.webp" alt=" theboysfraternity"
-                                loading="lazy">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904102/Projects/the%20boys%20fraternity/6_orp5p2.webp"
+                                alt=" theboysfraternity" loading="lazy">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904103/Projects/the%20boys%20fraternity/7_ongsis.webp" alt=" theboysfraternity"
-                                loading="lazy">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904103/Projects/the%20boys%20fraternity/7_ongsis.webp"
+                                alt=" theboysfraternity" loading="lazy">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904103/Projects/the%20boys%20fraternity/8_n0zxtu.webp" alt=" theboysfraternity"
-                                loading="lazy">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904103/Projects/the%20boys%20fraternity/8_n0zxtu.webp"
+                                alt=" theboysfraternity" loading="lazy">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904104/Projects/the%20boys%20fraternity/9_bhy4gn.webp" alt=" theboysfraternity"
-                                loading="lazy">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904104/Projects/the%20boys%20fraternity/9_bhy4gn.webp"
+                                alt=" theboysfraternity" loading="lazy">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904103/Projects/the%20boys%20fraternity/10_oeewzj.webp" alt=" theboysfraternity"
-                                loading="lazy">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904103/Projects/the%20boys%20fraternity/10_oeewzj.webp"
+                                alt=" theboysfraternity" loading="lazy">
                         </li>
 
 
@@ -255,25 +251,35 @@
 
         <div class="project-items-mobile-images">
 
-            <img class="mobile-images mobile" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904111/Projects/the%20boys%20fraternity/mobile/1_xrowpx.webp"
+            <img class="mobile-images mobile"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904111/Projects/the%20boys%20fraternity/mobile/1_xrowpx.webp"
                 alt="the boys fraternity photos">
-            <img class="mobile-images mobile" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904110/Projects/the%20boys%20fraternity/mobile/2_rvvqbg.webp"
+            <img class="mobile-images mobile"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904110/Projects/the%20boys%20fraternity/mobile/2_rvvqbg.webp"
                 alt="the boys fraternity photos">
-            <img class="mobile-images mobile" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904110/Projects/the%20boys%20fraternity/mobile/3_buylx4.webp"
+            <img class="mobile-images mobile"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904110/Projects/the%20boys%20fraternity/mobile/3_buylx4.webp"
                 alt="the boys fraternity photos">
-            <img class="mobile-images mobile" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904110/Projects/the%20boys%20fraternity/mobile/4_ha7adq.webp"
+            <img class="mobile-images mobile"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904110/Projects/the%20boys%20fraternity/mobile/4_ha7adq.webp"
                 alt="the boys fraternity photos">
-            <img class="mobile-images mobile" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904110/Projects/the%20boys%20fraternity/mobile/5_t5rhmn.webp"
+            <img class="mobile-images mobile"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904110/Projects/the%20boys%20fraternity/mobile/5_t5rhmn.webp"
                 alt="the boys fraternity photos">
-            <img class="mobile-images mobile" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904110/Projects/the%20boys%20fraternity/mobile/6_cxd0v7.webp"
+            <img class="mobile-images mobile"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904110/Projects/the%20boys%20fraternity/mobile/6_cxd0v7.webp"
                 alt="the boys fraternity photos">
-            <img class="mobile-images mobile" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904111/Projects/the%20boys%20fraternity/mobile/7_fn2e8h.webp"
+            <img class="mobile-images mobile"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904111/Projects/the%20boys%20fraternity/mobile/7_fn2e8h.webp"
                 alt="the boys fraternity photos">
-            <img class="mobile-images mobile" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904111/Projects/the%20boys%20fraternity/mobile/8_jdxdjx.webp"
+            <img class="mobile-images mobile"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904111/Projects/the%20boys%20fraternity/mobile/8_jdxdjx.webp"
                 alt="the boys fraternity photos">
-            <img class="mobile-images mobile" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904111/Projects/the%20boys%20fraternity/mobile/9_nixzzt.webp"
+            <img class="mobile-images mobile"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904111/Projects/the%20boys%20fraternity/mobile/9_nixzzt.webp"
                 alt="the boys fraternity photos">
-            <img class="mobile-images mobile" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904111/Projects/the%20boys%20fraternity/mobile/10_t7quax.webp"
+            <img class="mobile-images mobile"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904111/Projects/the%20boys%20fraternity/mobile/10_t7quax.webp"
                 alt="the boys fraternity photos">
 
         </div>
