--- a/projects/thelastburial.html
+++ b/projects/thelastburial.html
@@ -104,11 +104,7 @@
                     alt='extra-icon-image' />
             </a>
 
-            <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-linkedin_vgczmg.svg"
-                    alt='extra-icon-image' />
-            </a>
+
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
                 <img class="extra-icon-image"
@@ -169,16 +165,16 @@
 
                     <ul class="carousel-track">
                         <li class="carousel-slide current-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669906012/Projects/the%20last%20burial/1_k5n0rf.webp" alt=" thelastburial"
-                                loading="lazy">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669906012/Projects/the%20last%20burial/1_k5n0rf.webp"
+                                alt=" thelastburial" loading="lazy">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669906012/Projects/the%20last%20burial/2_vnwt3k.webp" alt=" thelastburial"
-                                loading="lazy">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669906012/Projects/the%20last%20burial/2_vnwt3k.webp"
+                                alt=" thelastburial" loading="lazy">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669906011/Projects/the%20last%20burial/3_eua4yc.webp" alt="thelastburial"
-                                loading="lazy"></li>
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669906011/Projects/the%20last%20burial/3_eua4yc.webp"
+                                alt="thelastburial" loading="lazy"></li>
                     </ul>
 
                 </div>
@@ -201,11 +197,14 @@
 
         <div class="project-items-mobile-images">
 
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669906025/Projects/the%20last%20burial/mobile/1_qcb3ze.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669906025/Projects/the%20last%20burial/mobile/1_qcb3ze.webp"
                 alt="thelastburial mobile">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669906024/Projects/the%20last%20burial/mobile/3_vy6gvd.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669906024/Projects/the%20last%20burial/mobile/3_vy6gvd.webp"
                 alt="thelastburial mobile">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669906024/Projects/the%20last%20burial/mobile/2_sniiqd.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669906024/Projects/the%20last%20burial/mobile/2_sniiqd.webp"
                 alt="thelastburial mobile">
 
         </div>
@@ -228,9 +227,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
 
-     <script src="../script.js" async defer></script>
+    <script src="../script.js" async defer></script>
     <script src="../scripts/projects.js" async defer></script>
-    
+
 </body>
 
 </html>
