--- a/projects/transcendental-signified.html
+++ b/projects/transcendental-signified.html
@@ -105,11 +105,7 @@
                     alt='extra-icon-image' />
             </a>
 
-            <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-linkedin_vgczmg.svg"
-                    alt='extra-icon-image' />
-            </a>
+
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
                 <img class="extra-icon-image"
@@ -197,17 +193,23 @@
                     <ul class="carousel-track">
 
                         <li class="carousel-slide current-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904193/Projects/transcendental-signified/1_v5jlek.webp" alt="waitingforchineke"></li>
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904193/Projects/transcendental-signified/1_v5jlek.webp"
+                                alt="waitingforchineke"></li>
                         <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904192/Projects/transcendental-signified/2_ttchnu.webp" alt="waitingforchineke"></li>
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904192/Projects/transcendental-signified/2_ttchnu.webp"
+                                alt="waitingforchineke"></li>
                         <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904191/Projects/transcendental-signified/3_djvec9.webp" alt="waitingforchineke"></li>
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904191/Projects/transcendental-signified/3_djvec9.webp"
+                                alt="waitingforchineke"></li>
                         <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904192/Projects/transcendental-signified/4_awjqpu.webp" alt="waitingforchineke"></li>
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904192/Projects/transcendental-signified/4_awjqpu.webp"
+                                alt="waitingforchineke"></li>
                         <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904192/Projects/transcendental-signified/5_dtojsr.webp" alt="waitingforchineke"></li>
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904192/Projects/transcendental-signified/5_dtojsr.webp"
+                                alt="waitingforchineke"></li>
                         <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904192/Projects/transcendental-signified/6_j78upv.webp" alt="waitingforchineke"></li>
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904192/Projects/transcendental-signified/6_j78upv.webp"
+                                alt="waitingforchineke"></li>
 
                     </ul>
 
@@ -236,17 +238,23 @@
 
         <div class="project-items-mobile-images">
 
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904200/Projects/transcendental-signified/mobile/1_jd52wr.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904200/Projects/transcendental-signified/mobile/1_jd52wr.webp"
                 alt="transcendental-signified images by neec nonso">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904200/Projects/transcendental-signified/mobile/2_bhsw6m.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904200/Projects/transcendental-signified/mobile/2_bhsw6m.webp"
                 alt="transcendental-signified images by neec nonso">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904201/Projects/transcendental-signified/mobile/3_ckwjrl.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904201/Projects/transcendental-signified/mobile/3_ckwjrl.webp"
                 alt="transcendental-signified images by neec nonso">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904200/Projects/transcendental-signified/mobile/4_zzvvgc.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904200/Projects/transcendental-signified/mobile/4_zzvvgc.webp"
                 alt="transcendental-signified images by neec nonso">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904200/Projects/transcendental-signified/mobile/5_h6egop.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904200/Projects/transcendental-signified/mobile/5_h6egop.webp"
                 alt="transcendental-signified images by neec nonso">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904200/Projects/transcendental-signified/mobile/6_qxo3cb.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904200/Projects/transcendental-signified/mobile/6_qxo3cb.webp"
                 alt="transcendental-signified images by neec nonso">
 
 
