--- a/projects/waitingforchineke.html
+++ b/projects/waitingforchineke.html
@@ -105,11 +105,7 @@
                     alt='extra-icon-image' />
             </a>
 
-            <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-linkedin_vgczmg.svg"
-                    alt='extra-icon-image' />
-            </a>
+
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
                 <img class="extra-icon-image"
@@ -176,34 +172,43 @@
                     <ul class="carousel-track">
 
                         <li class="carousel-slide current-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904221/Projects/waiting%20for%20chineke/1_fj2z4z.webp" alt="waitingforchineke">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904221/Projects/waiting%20for%20chineke/1_fj2z4z.webp"
+                                alt="waitingforchineke">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904218/Projects/waiting%20for%20chineke/2_l8olpm.webp" alt="waitingforchineke">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904218/Projects/waiting%20for%20chineke/2_l8olpm.webp"
+                                alt="waitingforchineke">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image"
                                 src="https://res.cloudinary.com/da93q413z/image/upload/v1669904219/Projects/waiting%20for%20chineke/2b_ommjti.webp"
                                 alt="waitingforchineke"></li>
                         <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904219/Projects/waiting%20for%20chineke/3_vaxvzg.webp" alt="waitingforchineke">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904219/Projects/waiting%20for%20chineke/3_vaxvzg.webp"
+                                alt="waitingforchineke">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904220/Projects/waiting%20for%20chineke/4_qrtvgy.webp" alt="waitingforchineke">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904220/Projects/waiting%20for%20chineke/4_qrtvgy.webp"
+                                alt="waitingforchineke">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904219/Projects/waiting%20for%20chineke/5_y5k9k1.webp" alt="waitingforchineke">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904219/Projects/waiting%20for%20chineke/5_y5k9k1.webp"
+                                alt="waitingforchineke">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904219/Projects/waiting%20for%20chineke/6_srfkxl.webp" alt="waitingforchineke">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904219/Projects/waiting%20for%20chineke/6_srfkxl.webp"
+                                alt="waitingforchineke">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904219/Projects/waiting%20for%20chineke/7_j0fqt0.webp" alt="waitingforchineke">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904219/Projects/waiting%20for%20chineke/7_j0fqt0.webp"
+                                alt="waitingforchineke">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904220/Projects/waiting%20for%20chineke/8_ulyvm4.webp" alt="waitingforchineke">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904220/Projects/waiting%20for%20chineke/8_ulyvm4.webp"
+                                alt="waitingforchineke">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904220/Projects/waiting%20for%20chineke/9_e7cify.webp" alt="waitingforchineke">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904220/Projects/waiting%20for%20chineke/9_e7cify.webp"
+                                alt="waitingforchineke">
                         </li>
 
                     </ul>
@@ -236,25 +241,35 @@
 
         <div class="project-items-mobile-images">
 
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904228/Projects/waiting%20for%20chineke/mobile/1_z3vjrf.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904228/Projects/waiting%20for%20chineke/mobile/1_z3vjrf.webp"
                 alt="waitngforchineke-mobile-image">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904228/Projects/waiting%20for%20chineke/mobile/2_iy4fjh.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904228/Projects/waiting%20for%20chineke/mobile/2_iy4fjh.webp"
                 alt="waitngforchineke-mobile-image">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904228/Projects/waiting%20for%20chineke/mobile/2b_etfmdo.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904228/Projects/waiting%20for%20chineke/mobile/2b_etfmdo.webp"
                 alt="waitngforchineke-mobile-image">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904228/Projects/waiting%20for%20chineke/mobile/3_k8bqiv.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904228/Projects/waiting%20for%20chineke/mobile/3_k8bqiv.webp"
                 alt="waitngforchineke-mobile-image">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904228/Projects/waiting%20for%20chineke/mobile/4_ngwj4z.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904228/Projects/waiting%20for%20chineke/mobile/4_ngwj4z.webp"
                 alt="waitngforchineke-mobile-image">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904228/Projects/waiting%20for%20chineke/mobile/5_p0snso.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904228/Projects/waiting%20for%20chineke/mobile/5_p0snso.webp"
                 alt="waitngforchineke-mobile-image">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904229/Projects/waiting%20for%20chineke/mobile/6_eqon23.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904229/Projects/waiting%20for%20chineke/mobile/6_eqon23.webp"
                 alt="waitngforchineke-mobile-image">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904229/Projects/waiting%20for%20chineke/mobile/7_jkd67w.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904229/Projects/waiting%20for%20chineke/mobile/7_jkd67w.webp"
                 alt="waitngforchineke-mobile-image">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904229/Projects/waiting%20for%20chineke/mobile/8_o9bnqh.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904229/Projects/waiting%20for%20chineke/mobile/8_o9bnqh.webp"
                 alt="waitngforchineke-mobile-image">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904229/Projects/waiting%20for%20chineke/mobile/9_orulph.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904229/Projects/waiting%20for%20chineke/mobile/9_orulph.webp"
                 alt="waitngforchineke-mobile-image">
 
 
