--- a/projects/whatwasdeadwasneverdead.html
+++ b/projects/whatwasdeadwasneverdead.html
@@ -108,11 +108,7 @@
                     alt='extra-icon-image' />
             </a>
 
-            <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-linkedin_vgczmg.svg"
-                    alt='extra-icon-image' />
-            </a>
+
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
                 <img class="extra-icon-image"
@@ -204,7 +200,7 @@
                         <li class="carousel-slide"><img class="carousel-image"
                                 src="https://res.cloudinary.com/da93q413z/image/upload/v1669904311/Projects/what%20was%20dead%20was%20never%20dead/neec.nonso--6_uywir1.webp"
                                 alt=" Temple Image" loading="">
-                            </li>
+                        </li>
 
                     </ul>
 
@@ -230,17 +226,23 @@
 
         <div class="project-items-mobile-images">
 
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904321/Projects/what%20was%20dead%20was%20never%20dead/mobile/1_sbcsb8.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904321/Projects/what%20was%20dead%20was%20never%20dead/mobile/1_sbcsb8.webp"
                 alt="what was dead was never dead images">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904322/Projects/what%20was%20dead%20was%20never%20dead/mobile/2_f5dit3.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904322/Projects/what%20was%20dead%20was%20never%20dead/mobile/2_f5dit3.webp"
                 alt="what was dead was never dead images">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904321/Projects/what%20was%20dead%20was%20never%20dead/mobile/3_rfu4hc.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904321/Projects/what%20was%20dead%20was%20never%20dead/mobile/3_rfu4hc.webp"
                 alt="what was dead was never dead images">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904321/Projects/what%20was%20dead%20was%20never%20dead/mobile/4_jyl8sw.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904321/Projects/what%20was%20dead%20was%20never%20dead/mobile/4_jyl8sw.webp"
                 alt="what was dead was never dead images">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904321/Projects/what%20was%20dead%20was%20never%20dead/mobile/5_wn5rk5.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904321/Projects/what%20was%20dead%20was%20never%20dead/mobile/5_wn5rk5.webp"
                 alt="what was dead was never dead images">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904321/Projects/what%20was%20dead%20was%20never%20dead/mobile/6_caobne.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904321/Projects/what%20was%20dead%20was%20never%20dead/mobile/6_caobne.webp"
                 alt="what was dead was never dead images">
 
         </div>
@@ -264,7 +266,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
 
 
-     <script src="../script.js" async defer></script>
+    <script src="../script.js" async defer></script>
     <script src="../scripts/projects.js" async defer></script>
 </body>
 
