--- a/exhibitions/in-a-pot-of-hot-soup.html
+++ b/exhibitions/in-a-pot-of-hot-soup.html
@@ -105,11 +105,7 @@
                     alt='extra-icon-image' />
             </a>
 
-            <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-linkedin_vgczmg.svg"
-                    alt='extra-icon-image' />
-            </a>
+
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
                 <img class="extra-icon-image"
@@ -141,19 +137,22 @@
         <section class="exhibition-images">
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967557/in-a-pot-of-hot-soup/mobile/2_phebcn.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967557/in-a-pot-of-hot-soup/mobile/2_phebcn.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669888461/in-a-pot-of-hot-soup/2_pkmitt.webp"
                     alt="in-a-pot-of-hot-soup">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967557/in-a-pot-of-hot-soup/mobile/6_uhnqkv.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967557/in-a-pot-of-hot-soup/mobile/6_uhnqkv.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669888461/in-a-pot-of-hot-soup/6_aprsi0.webp"
                     alt="in-a-pot-of-hot-soup">
             </picture>
 
             <picture class="header-image">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967557/in-a-pot-of-hot-soup/mobile/1_muk70i.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967557/in-a-pot-of-hot-soup/mobile/1_muk70i.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669888461/in-a-pot-of-hot-soup/1_bxi4f6.webp"
                     alt="in-a-pot-of-hot-soup">
             </picture>
@@ -167,33 +166,39 @@
 
             -->
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967557/in-a-pot-of-hot-soup/mobile/4_fhwvnh.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967557/in-a-pot-of-hot-soup/mobile/4_fhwvnh.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669888461/in-a-pot-of-hot-soup/4_ghitwl.webp"
                     alt="in-a-pot-of-hot-soup">
             </picture>
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967557/in-a-pot-of-hot-soup/mobile/5_jtgulc.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967557/in-a-pot-of-hot-soup/mobile/5_jtgulc.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669888461/in-a-pot-of-hot-soup/5_tqtmkf.webp"
                     alt="in-a-pot-of-hot-soup">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967558/in-a-pot-of-hot-soup/mobile/7_okub7k.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967558/in-a-pot-of-hot-soup/mobile/7_okub7k.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669888463/in-a-pot-of-hot-soup/7_ynjnqw.webp"
                     alt="in-a-pot-of-hot-soup">
             </picture>
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967558/in-a-pot-of-hot-soup/mobile/8_jjs9bi.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967558/in-a-pot-of-hot-soup/mobile/8_jjs9bi.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669888462/in-a-pot-of-hot-soup/8_atlps8.webp"
                     alt="in-a-pot-of-hot-soup">
             </picture>
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967558/in-a-pot-of-hot-soup/mobile/9_venvag.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967558/in-a-pot-of-hot-soup/mobile/9_venvag.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669888462/in-a-pot-of-hot-soup/9_mffl8z.webp"
                     alt="in-a-pot-of-hot-soup">
             </picture>
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967558/in-a-pot-of-hot-soup/mobile/10_rzgt2t.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669967558/in-a-pot-of-hot-soup/mobile/10_rzgt2t.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669888463/in-a-pot-of-hot-soup/10_dwzzmd.webp"
                     alt="in-a-pot-of-hot-soup">
             </picture>
