--- a/exhibitions/no-victor-no-vanquished:theworldatthecrossroads.html
+++ b/exhibitions/no-victor-no-vanquished:theworldatthecrossroads.html
@@ -107,11 +107,7 @@
                     alt='extra-icon-image' />
             </a>
 
-            <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-linkedin_vgczmg.svg"
-                    alt='extra-icon-image' />
-            </a>
+
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
                 <img class="extra-icon-image"
@@ -145,21 +141,24 @@
             <img class="slider-image" name="slide" />
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669968062/no-victor/mobile/3_gdjpww.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669968062/no-victor/mobile/3_gdjpww.webp">
                 <img class=""
                     src="https://res.cloudinary.com/da93q413z/image/upload/v1669891845/no-victor/3_iubbqq.webp"
                     alt="no-victor-no-vanquished">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669968062/no-victor/mobile/4_iy1lcd.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669968062/no-victor/mobile/4_iy1lcd.webp">
                 <img class=""
                     src="https://res.cloudinary.com/da93q413z/image/upload/v1669891846/no-victor/4_ku5t1q.webp"
                     alt="no-victor-no-vanquished">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669968062/no-victor/mobile/5_lvmjto.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669968062/no-victor/mobile/5_lvmjto.webp">
                 <img class=""
                     src="https://res.cloudinary.com/da93q413z/image/upload/v1669891846/no-victor/5_lourse.webp"
                     alt="no-victor-no-vanquished">
