--- a/exhibitions/the-world-today-10k+.html
+++ b/exhibitions/the-world-today-10k+.html
@@ -106,11 +106,7 @@
                     alt='extra-icon-image' />
             </a>
 
-            <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-linkedin_vgczmg.svg"
-                    alt='extra-icon-image' />
-            </a>
+
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
                 <img class="extra-icon-image"
@@ -142,61 +138,71 @@
         <section class="exhibition-images">
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669969080/the-world-today-10k%2B/mobile/1_i3gv3s.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669969080/the-world-today-10k%2B/mobile/1_i3gv3s.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669882220/the-world-today-10k%2B/1_jbvkah.webp"
                     alt="the world today 10k">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669969079/the-world-today-10k%2B/mobile/2_y53sqo.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669969079/the-world-today-10k%2B/mobile/2_y53sqo.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669882220/the-world-today-10k%2B/2_x5unyy.webp"
                     alt="the world today 10k">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669969080/the-world-today-10k%2B/mobile/3_g8calt.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669969080/the-world-today-10k%2B/mobile/3_g8calt.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669882220/the-world-today-10k%2B/3_rz0lde.webp"
                     alt="the world today 10k">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669969080/the-world-today-10k%2B/mobile/4_imfi0l.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669969080/the-world-today-10k%2B/mobile/4_imfi0l.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669882221/the-world-today-10k%2B/4_ngm3gj.webp"
                     alt="the world today 10k">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669969080/the-world-today-10k%2B/mobile/5_obb4vh.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669969080/the-world-today-10k%2B/mobile/5_obb4vh.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669882221/the-world-today-10k%2B/5_c5cb1w.webp"
                     alt="the world today 10k">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669969080/the-world-today-10k%2B/mobile/6_btumsh.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669969080/the-world-today-10k%2B/mobile/6_btumsh.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669882221/the-world-today-10k%2B/6_skvbkv.webp"
                     alt="the world today 10k">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669969080/the-world-today-10k%2B/mobile/7_h2vjpe.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669969080/the-world-today-10k%2B/mobile/7_h2vjpe.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669882221/the-world-today-10k%2B/8_wgtycb.webp"
                     alt="the world today 10k">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669969080/the-world-today-10k%2B/mobile/8_yofk6x.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669969080/the-world-today-10k%2B/mobile/8_yofk6x.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669882221/the-world-today-10k%2B/9_z0qbot.webp"
                     alt="the world today 10k">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669969080/the-world-today-10k%2B/mobile/9_qej08y.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669969080/the-world-today-10k%2B/mobile/9_qej08y.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669882221/the-world-today-10k%2B/10_po8lm3.webp"
                     alt="the world today 10k">
             </picture>
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669969080/the-world-today-10k%2B/mobile/11_z4b9b8.webp">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669969080/the-world-today-10k%2B/mobile/11_z4b9b8.webp">
                 <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669882222/the-world-today-10k%2B/11_rkgfzq.webp"
                     alt="the world today 10k">
             </picture>
