--- a/exhibitions/wanawari.html
+++ b/exhibitions/wanawari.html
@@ -106,11 +106,7 @@
                     alt='extra-icon-image' />
             </a>
 
-            <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-linkedin_vgczmg.svg"
-                    alt='extra-icon-image' />
-            </a>
+
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
                 <img class="extra-icon-image"
@@ -140,7 +136,8 @@
         </section>
 
         <section class="exhibition-images">
-            <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669972359/wana-wari/1_fk1auc.jpg" alt="wanawari exhibition photo">
+            <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669972359/wana-wari/1_fk1auc.jpg"
+                alt="wanawari exhibition photo">
         </section>
 
     </div>
