--- a/projects/toiletintoiletout.html
+++ b/projects/toiletintoiletout.html
@@ -108,11 +108,7 @@
                     alt='extra-icon-image' />
             </a>
 
-            <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-linkedin_vgczmg.svg"
-                    alt='extra-icon-image' />
-            </a>
+
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
                 <img class="extra-icon-image"
@@ -237,25 +233,35 @@
 
         <div class="project-items-mobile-images">
 
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904147/Projects/toilet%20in%2C%20toilet%20out/mobile/1_od2fj5.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904147/Projects/toilet%20in%2C%20toilet%20out/mobile/1_od2fj5.webp"
                 alt="toilet in toilet out">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904147/Projects/toilet%20in%2C%20toilet%20out/mobile/2_z2zmvc.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904147/Projects/toilet%20in%2C%20toilet%20out/mobile/2_z2zmvc.webp"
                 alt="toilet in toilet out">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904147/Projects/toilet%20in%2C%20toilet%20out/mobile/3_uqt9de.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904147/Projects/toilet%20in%2C%20toilet%20out/mobile/3_uqt9de.webp"
                 alt="toilet in toilet out">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904147/Projects/toilet%20in%2C%20toilet%20out/mobile/4_y9dzly.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904147/Projects/toilet%20in%2C%20toilet%20out/mobile/4_y9dzly.webp"
                 alt="toilet in toilet out">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904147/Projects/toilet%20in%2C%20toilet%20out/mobile/5_nwwgmu.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904147/Projects/toilet%20in%2C%20toilet%20out/mobile/5_nwwgmu.webp"
                 alt="toilet in toilet out">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904148/Projects/toilet%20in%2C%20toilet%20out/mobile/6_hu6xys.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904148/Projects/toilet%20in%2C%20toilet%20out/mobile/6_hu6xys.webp"
                 alt="toilet in toilet out">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904148/Projects/toilet%20in%2C%20toilet%20out/mobile/7_k4joln.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904148/Projects/toilet%20in%2C%20toilet%20out/mobile/7_k4joln.webp"
                 alt="toilet in toilet out">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904148/Projects/toilet%20in%2C%20toilet%20out/mobile/8_j8qqpq.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904148/Projects/toilet%20in%2C%20toilet%20out/mobile/8_j8qqpq.webp"
                 alt="toilet in toilet out">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904148/Projects/toilet%20in%2C%20toilet%20out/mobile/9_cueueb.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904148/Projects/toilet%20in%2C%20toilet%20out/mobile/9_cueueb.webp"
                 alt="toilet in toilet out">
-            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904148/Projects/toilet%20in%2C%20toilet%20out/mobile/10_ggz1li.webp"
+            <img class="mobile-images"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904148/Projects/toilet%20in%2C%20toilet%20out/mobile/10_ggz1li.webp"
                 alt="toilet in toilet out">
 
         </div>
