--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <meta property="og:title" content="homepage | neec nonso | visual artist">
     <meta property="og:description" content="neec nonso is a nigerian visual artist">
     <meta property="og:url" content="http://neecnonso.com" />
-    <meta property="og:image" content="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/ogimage_r9q3lw.png" />
+    <meta property="og:image"
+        content="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/ogimage_r9q3lw.png" />
 
 
     <!-- Facebook, whatsapp, instagram, twitter and other popular social media -->
@@ -34,15 +35,15 @@
     <meta name="twitter:site" content="@neecnonso" />
     <meta name="twitter:title" content="neec nonso | visual artist">
     <meta property="og:description" content="neec nonso is a nigerian visual artist based in lagos,nigeria">
-    <meta name="twitter:image" content="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/ogimage_r9q3lw.png" />
+    <meta name="twitter:image"
+        content="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/ogimage_r9q3lw.png" />
 
 
     <!-- Style Links 
 
     <link rel="stylesheet" href="minify.css"> -->
 
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/mobile.css">
+    <link rel="stylesheet" href="./css/index.css">
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WKWYR7YG7F"></script>
     <script>
@@ -58,77 +59,8 @@
 
 </head>
 
-<body onload="randombg()">
-    <img class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50px"
-        src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/chevron-up-circle-outline_jfaz33.svg"
-        alt="back to top icon">
-
-    <div id="random" class="main">
-
-
-        <div class="vertical-center">
-            <a class="home-btn" href="./projects">5555555555</a>
-        </div>
-
-
-
-    </div>
-
-
-
-    <!-- Start of Footer -->
-
-    <footer class="footer-container">
-
-        <p class="copyright"> &copy; 2022 |<span class="copyright-name"><a href="/">neec nonso</a></span> | all rights
-            reserved.</p>
-    </footer>
-
-    <!-- End of Footer -->
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
-
-
-    <script>
-
-
-
-
-        function randombg() {
-            var random = Math.floor(Math.random() * 15) + 0;
-            var backgroundImages = [
-                "url('https://res.cloudinary.com/da93q413z/image/upload/v1669879251/homepage/7_kqcffs.webp')",
-                "url('https://res.cloudinary.com/da93q413z/image/upload/v1669879250/homepage/8_ay9yth.webp')",
-                "url('https://res.cloudinary.com/da93q413z/image/upload/v1669879252/homepage/2_wvex88.webp')",
-                "url('https://res.cloudinary.com/da93q413z/image/upload/v1669879240/homepage/6_z3htol.webp')",
-                "url('https://res.cloudinary.com/da93q413z/image/upload/v1669879238/homepage/13_yqjebl.webp')",
-
-                "url('https://res.cloudinary.com/da93q413z/image/upload/v1669879237/homepage/14_aoifjj.webp')",
-                "url('https://res.cloudinary.com/da93q413z/image/upload/v1669879236/homepage/12_yjyofs.webp')",
-                "url('https://res.cloudinary.com/da93q413z/image/upload/v1669879235/homepage/10_akuxfa.webp')",
-                "url('https://res.cloudinary.com/da93q413z/image/upload/v1669879228/homepage/2_wvex88.webp')",
-                "url('https://res.cloudinary.com/da93q413z/image/upload/v1669879228/homepage/3_dkyvpc.webp')",
-
-                "url('https://res.cloudinary.com/da93q413z/image/upload/v1669879221/homepage/1_h9hnqx.webp')",
-                "url('https://res.cloudinary.com/da93q413z/image/upload/v1669879221/homepage/11_eam2k4.webp')",
-                "url('https://res.cloudinary.com/da93q413z/image/upload/v1669879220/homepage/4_f4uqdu.webp')",
-                "url('https://res.cloudinary.com/da93q413z/image/upload/v1669879219/homepage/9_zglsme.webp')",
-                "url('https://res.cloudinary.com/da93q413z/image/upload/v1669879218/homepage/5_xcd13b.webp')",
-            ];
-            document.getElementById("random").style.backgroundImage = backgroundImages[random];
-
-            document.getElementById("random").style.transition = 'opacity 1s';
-            document.getElementById("random").style.opacity = 0;
-            setTimeout(() => {
-                document.getElementById("random").style.opacity = 1;
-            }, 50);
-        }
-
-
-        setInterval(randombg, 2000)
-    </script>
-    <!-- <script src="countdown.js" async defer></script> -->
+<body>
+    <script src="index.js" async defer></script>
 </body>
 
 </html>
