--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
 
 <body>
     <script src="index.js" async defer></script>
+    <div class="vertical-center">
+        <a class="home-btn" href="./projects">5555555555</a>
+    </div>
+
 </body>
 
 </html>
