--- a/index.html
+++ b/index.html
@@ -60,11 +60,21 @@
 </head>
 
 <body>
-    <script src="index.js" async defer></script>
-    <div class="vertical-center">
-        <a class="home-btn" href="./projects">5555555555</a>
+
+
+    <div class="backgroundDiv">
+        <div class="vertical-center">
+            <a class="home-btn" href="./projects">5555555555</a>
+        </div>
     </div>
 
+
+    <footer class="footer-container">
+
+        <p class="copyright"> &copy; 2022 |<span class="copyright-name"><a href="/">neec nonso</a></span> | all rights
+            reserved.</p>
+    </footer>
+    <script src="index.js" async defer></script>
 </body>
 
 </html>
